<resources>
    <string name="app_name">Guide Hungry</string>
    <string name="about_us">About Us</string>
    <string name="katalog">Katalog</string>
    <string name="home">Home</string>
    <string name="a_z_filter">A-Z</string>
    <string name="tampilan_katalog_makanan">Tampilan Katalog Makanan</string>
    <string name="view_all">Lihat Selengkapnya</string>

    <string name="logo_description">Logo Description</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_button_text">Login</string>
    <string name="toggle_button_text">Daftar</string>
    <string name="context_view_text">Context View Text</string>
</resources>